Updated outdated URLs

--- a/public/pages/compatibility.html
+++ b/public/pages/compatibility.html
@@ -23,9 +23,9 @@
                 </div>
             </div>
             <div id="link_tray">
-                <a href="https://github.com/Lime3DS/Lime-3DS-Emulator">GitHub</a> |
+                <a href="https://github.com/Lime3DS/Lime3DS">GitHub</a> |
                 <a href="https://discord.com/invite/4ZjMpAp3M6">Discord</a> |
-                <a href="https://github.com/Lime3DS/Lime-3DS-Emulator/releases">Releases</a>
+                <a href="https://github.com/Lime3DS/Lime3DS/releases">Releases</a>
             </div>
             <img class="lime-logo" src="../lime.svg" width="45px">
         </div>
