--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         </div>
     </div>
     <div id="link_tray">
-        <a href="https://github.com/Lime3DS/Lime-3DS-Emulator">GitHub</a> |
+        <a href="https://github.com/Lime3DS/Lime3DS">GitHub</a> |
         <a href="https://discord.com/invite/4ZjMpAp3M6">Discord</a> |
-        <a href="https://github.com/Lime3DS/Lime-3DS-Emulator/releases">Releases</a>
+        <a href="https://github.com/Lime3DS/Lime3DS/releases">Releases</a>
     </div>
     <div class="lime-logo" id="container">
         <img id="container" src="lime/lime.png" alt="Lime3DS logo">
@@ -55,7 +55,7 @@
         Operating System: Android 9.0+. <br>
         CPU: AArch64. Snapdragon 835 SoC or better. <br>
         GPU: OpenGL ES 3.2 or Vulkan 1.1 support.</p> <br>
-    <p>Have any questions? Please refer to the <a href="https://github.com/Lime3DS/Lime-3DS-Emulator">GitHub repository</a> or the <a href="https://discord.com/invite/4ZjMpAp3M6">Discord server</a>.</p>
+    <p>Have any questions? Please refer to the <a href="https://github.com/Lime3DS/Lime3DS">GitHub repository</a> or the <a href="https://discord.com/invite/4ZjMpAp3M6">Discord server</a>.</p>
 
     <h3 class="index-h3" id="todo">To do</h3>
     <p>Sorry, this area is under construction! Please check again soon.</p>
