Remove drop-down

--- a/public/pages/downloads.html
+++ b/public/pages/downloads.html
@@ -38,15 +38,10 @@
     <p>These are Lime3DS' latest releases/builds for the following platforms:</p>
   <div id="bbcon">
     <button class="build-button" id="androidButton">Android</button>
-    <button class="build-button" id="linuxButton">Linux</button> <br>
-    <div class="dropbdown" onmouseenter="toggleDropbdown(true)" onmouseleave="toggleDropbdown(false)">
-        <button class="dropbuild">Windows</button>
-        <div class="dropbdown-content" id="dropbdownContent">
-            <a id="windowsButton1">MSVC</a>
-            <a id="windowsButton2">MSYS2</a>
-        </div>
-    </div>
-    <button class="build-button" id="macosButton">MacOS</button>
+    <button class="build-button" id="linuxButton">Linux</button>
+    <button class="build-button" id="macosButton">MacOS</button> <br>
+    <button class="build-button" id="windowsButton1">Windows MSVC</button>
+    <button class="build-button" id="windowsButton2">Windows MSYS2</button>
   </div>
 </div>
 <script>
