--- a/public/pages/downloads.html
+++ b/public/pages/downloads.html
@@ -37,11 +37,11 @@
     <h3 class="index-h3" id="about" style="margin-top: 0em;">Latest Releases</h3>
     <p>These are Lime3DS' latest releases/builds for the following platforms:</p>
   <div id="bbcon">
-    <h3 class="index-h3" style="font-size: 0.75em;">Normal Builds</h3>
+    <h3 class="index-h3">Normal Builds</h3>
     <button class="build-button" id="androidButton">Android</button>
     <button class="build-button" id="linuxButton">Linux</button>
     <button class="build-button" id="macosButton">MacOS</button> <br>
-    <h3 class="index-h3" style="font-size: 0.75em;">Windows Builds</h3>
+    <h3 class="index-h3">Windows Builds</h3>
     <button class="build-button" id="windowsButton1">Windows MSVC</button>
     <button class="build-button" id="windowsButton2">Windows MSYS2</button>
   </div>
