Fixed Windows MSYS2 build instructions being partially incorrect

--- a/public/pages/building/windows-msys.html
+++ b/public/pages/building/windows-msys.html
@@ -63,7 +63,7 @@
                     <ul>
                         <li>To build without Qt, pass <code>-DENABLE_QT=no</code> to CMake</li>
                     </ul>
-                    <li>Make the executable: <code>make -j4</code></li>
+                    <li>Make the executable: <code>cmake --build . -- -j4</code></li>
                     <li>You can run the exe from command line with: <code>./bin/lime-qt.exe</code></li>
                 </ul>
             </div>
