--- a/public/pages/compatibility.html
+++ b/public/pages/compatibility.html
@@ -15,7 +15,7 @@
 <body>
     <div id="app">
         <div id="header">
-            <div class="dropdown">
+            <div class="dropdown" onmouseenter="toggleDropdown(true)" onmouseleave="toggleDropdown(false)">
                 <button class="dropbtn">Menu</button>
                 <div class="dropdown-content">
                     <a href="../index.html">Home</a>
@@ -109,7 +109,7 @@
         }
         getCompatibilityList();
     </script>
-    <script type="module" src="../index.js"></script>
+    <script src="../index.js"></script>
 </body>
 
 </html>
