--- a/public/pages/game_dumping/cartridges.html
+++ b/public/pages/game_dumping/cartridges.html
@@ -20,7 +20,7 @@
 <body>
     <div id="app">
       <div id="header">
-        <div class="dropdown">
+        <div class="dropdown" onmouseenter="toggleDropdown(true)" onmouseleave="toggleDropdown(false)">
           <button class="dropbtn">Menu</button>
           <div class="dropdown-content">
             <a href="../../index.html">Home</a>
@@ -72,7 +72,7 @@
             </div>
         </div>
     </div>
-    <script type="module" src="index.js"></script>
+    <script src="../../index.js"></script>
 </body>
 
 </html>
