--- a/public/pages/wiki.html
+++ b/public/pages/wiki.html
@@ -14,7 +14,7 @@
 <body>
     <div id="app">
       <div id="header">
-        <div class="dropdown">
+        <div class="dropdown" onmouseenter="toggleDropdown(true)" onmouseleave="toggleDropdown(false)">
           <button class="dropbtn">Menu</button>
           <div class="dropdown-content">
             <a href="../index.html">Home</a>
@@ -65,6 +65,6 @@
         </div>
       </div>
     </div>
-   <script type="module" src="index.js"></script>
+   <script src="../index.js"></script>
 </body>
 </html>
