--- a/public/pages/building/windows-msys.html
+++ b/public/pages/building/windows-msys.html
@@ -20,7 +20,7 @@
 <body>
     <div id="app">
         <div id="header">
-        <div class="dropdown">
+        <div class="dropdown" onmouseenter="toggleDropdown(true)" onmouseleave="toggleDropdown(false)">
           <button class="dropbtn">Menu</button>
           <div class="dropdown-content">
             <a href="../../index.html">Home</a>
@@ -63,13 +63,13 @@
                     <ul>
                         <li>To build without Qt, pass <code>-DENABLE_QT=no</code> to CMake</li>
                     </ul>
-                    <li>Make the executable: <code>make -j4</code></li>
+                    <li>Make the executable: <code>cmake --build . -- -j4</code></li>
                     <li>You can run the exe from command line with: <code>./bin/lime-qt.exe</code></li>
                 </ul>
             </div>
         </div>
     </div>
-    <script type="module" src="index.js"></script>
+    <script src="../../index.js"></script>
 </body>
 
 </html>
