Added downloads page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <button class="dropbtn">Menu</button>
         <div class="dropdown-content" id="dropdownContent">
             <a href="pages/wiki.html">Wiki</a>
+            <a href="pages/downloads.html">Latest Builds</a>
         </div>
     </div>
     <div id="link_tray">
