--- a/index.html
+++ b/index.html
@@ -1,97 +1,32 @@
-<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lime3DS</title>
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-<div id="header">
-    <div class="dropdown" onmouseenter="toggleDropdown(true)" onmouseleave="toggleDropdown(false)">
-        <button class="dropbtn">Menu</button>
-        <div class="dropdown-content" id="dropdownContent">
-            <a href="pages/wiki.html">Wiki</a>
+    <script src="/resources/scripts/htmlimporter.js"></script>
+    <script>HTMLImporter.import("/resources/templates/generic-head.html");</script>
+
+    <head>
+        <link rel="stylesheet" href="/resources/stylesheets/scrolling-gallery.css">
+    </head>
+
+    <body>
+        <script>HTMLImporter.import("/resources/templates/generic-nav.html");</script>
+
+        <div id="content">
+            <div id="box">
+                <h2 style="font-weight: 700;">Lime3DS is an open-source, easy-to-use Nintendo 3DS emulator</h2>
+            </div>
+            <div id="scrolling-gallery">
+                <img class="scroller" src="/resources/images/emu-screenshots/metroid-samus-returns.jpg"/>
+                <img class="scroller" src="/resources/images/emu-screenshots/pokemon-ultra-moon.jpg"/>
+                <img class="scroller" src="/resources/images/emu-screenshots/luigis-mansion-dark-moon.jpg"/>
+                <img class="scroller" src="/resources/images/emu-screenshots/star-fox-64-3d.jpg"/>
+                <img class="scroller" src="/resources/images/emu-screenshots/new-super-mario-bros-2.jpg"/>
+                <!-- Added for seamless loop -->
+                <img class="scroller" src="/resources/images/emu-screenshots/metroid-samus-returns.jpg"/>
+                <img class="scroller" src="/resources/images/emu-screenshots/pokemon-ultra-moon.jpg"/>
+            </div>
+            <p>Forked from Citra, Lime3DS has all of the features you have come to expect from a 3DS emulator.</p>
+            <p>Our mission is to continue to further the progress of 3DS emulation, implementing new features and making constant improvements for the benefit of your gaming experience.</p>
+            <p>As a community effort, this project is only possible due to the work of passionate enthusiasts. Together, the future of 3DS emulation can be bright.
+            <script>HTMLImporter.import("/resources/templates/generic-footer.html");</script>
         </div>
-    </div>
-    <div id="link_tray">
-        <a href="https://github.com/Lime3DS/Lime3DS">GitHub</a> |
-        <a href="https://discord.com/invite/4ZjMpAp3M6">Discord</a> |
-        <a href="https://github.com/Lime3DS/Lime3DS/releases">Releases</a>
-    </div>
-    <div class="lime-logo" id="container">
-        <img id="container" src="lime/lime.png" alt="Lime3DS logo">
-        <img id="object" src="lime/face.png" alt="Lime3DS logo">
-    </div>
-</div>
-
-<div id="box">
-    <img class="box-img" src="lime.svg">
-    <h2>Lime3DS</h2>
-</div>
-
-<div id="content">
-    <h3 class="index-h3" id="about" style="margin-top: 0em;">About</h3>
-    <p>Lime3DS is an open-source, easy-to-use Nintendo 3DS emulator, forked from Citra. Lime3DS has many features, such as firmware emulation, amiibo loading, and partial support for homebrew applications.</p>
-
-    <h3 class="index-h3" id="faq">FAQ</h3>
-    <p>Here are some of the most frequently asked questions we get from the Lime3DS Discord server.</p>
-    <p>"Why won't Lime3DS launch on my computer?"<br>There are two executables for Lime3DS, 'lime.exe' and 'lime-qt.exe'. Make sure you are launching 'lime-qt.exe'.</p>
-    <p>"Why does Lime3DS keep crashing?"<br>One of the most common reasons for Lime3DS crashing is insufficient and/or unsupported hardware. 4GB+ of RAM is recommended in order to properly run Lime3DS.</p>
-    <p>What are the minimum specs to run Lime3DS on my device?"<br>PC: <br>
-        Operating System: Windows 10/11 (64-bit), MacOS Big Sur, or modern 64-bit Linux. <br>
-
-        CPU: x86-64 (64-bit) CPU. Single core performance higher than 1,800 on Passmark. <br>
-
-        GPU: OpenGL 4.3 or Vulkan 1.1 support. <br>
-
-        Ram: 2GB of free RAM. 4GB is recommended. <br> <br>
-
-        Android: <br>
-        Operating System: Android 9.0+. <br>
-        CPU: AArch64. Snapdragon 835 SoC or better. <br>
-        GPU: OpenGL ES 3.2 or Vulkan 1.1 support.</p> <br>
-    <p>Have any questions? Please refer to the <a href="https://github.com/Lime3DS/Lime3DS">GitHub repository</a> or the <a href="https://discord.com/invite/4ZjMpAp3M6">Discord server</a>.</p>
-
-    <p>Site Created by <a href="https://limegradient.xyz/">LimeGradient</a> and <a href="https://github.com/LutraVibes">LutraVibes</a></p>
-</div>
-<script>
-    // Preload images
-    var images = ['lime/face.png', 'lime/smile.png'];
-    preloadImages(images);
-
-    function preloadImages(array) {
-        if (!preloadImages.list) {
-            preloadImages.list = [];
-        }
-        for (var i = 0; i < array.length; i++) {
-            var img = new Image();
-            img.src = array[i];
-            preloadImages.list.push(img);
-        }
-    }
-
-    document.addEventListener('mousemove', function (e) {
-        var object = document.getElementById('object');
-        var container = document.getElementById('container');
-
-        // Calculate the position of the cursor relative to the container
-        var mouseX = e.clientX - container.getBoundingClientRect().left;
-        var mouseY = e.clientY - container.getBoundingClientRect().top;
-
-        // Calculate the position of the eyes relative to the cursor position within the lime container
-        var offsetX = (mouseX - (container.offsetWidth / 2)) * 0.0025; // Adjust the factor to control eye movement
-        var offsetY = (mouseY - (container.offsetHeight / 2)) * 0.0025; // Adjust the factor to control eye movement
-
-        // Set the position of the eyes
-        object.style.left = (container.offsetWidth / 2 - object.offsetWidth / 2 + offsetX) + 'px';
-        object.style.top = (container.offsetHeight / 2 - object.offsetHeight / 2 + offsetY) + 'px';
-    });
-</script>
-<script src="index.js"></script>
-</body>
+    </body>
 </html>
