Fixed gallery images sometimes having gaps between them

--- a/index.html
+++ b/index.html
@@ -14,14 +14,18 @@
                 <h2 style="font-weight: 700;">Lime3DS is an open-source, easy-to-use Nintendo 3DS emulator</h2>
             </div>
             <div id="scrolling-gallery">
-                <img class="scroller" src="/resources/images/emu-screenshots/metroid-samus-returns.jpg"/>
-                <img class="scroller" src="/resources/images/emu-screenshots/pokemon-ultra-moon.jpg"/>
-                <img class="scroller" src="/resources/images/emu-screenshots/luigis-mansion-dark-moon.jpg"/>
-                <img class="scroller" src="/resources/images/emu-screenshots/star-fox-64-3d.jpg"/>
-                <img class="scroller" src="/resources/images/emu-screenshots/new-super-mario-bros-2.jpg"/>
-                <!-- Added for seamless loop -->
-                <img class="scroller" src="/resources/images/emu-screenshots/metroid-samus-returns.jpg"/>
-                <img class="scroller" src="/resources/images/emu-screenshots/pokemon-ultra-moon.jpg"/>
+                <div id="scrolling-gallery-container">
+                    <img class="scroller" src="/resources/images/emu-screenshots/metroid-samus-returns.jpg"/>
+                    <img class="scroller" src="/resources/images/emu-screenshots/pokemon-ultra-moon.jpg"/>
+                    <img class="scroller" src="/resources/images/emu-screenshots/luigis-mansion-dark-moon.jpg"/>
+                    <img class="scroller" src="/resources/images/emu-screenshots/star-fox-64-3d.jpg"/>
+                    <img class="scroller" src="/resources/images/emu-screenshots/new-super-mario-bros-2.jpg"/>
+                    <img class="scroller" src="/resources/images/emu-screenshots/metroid-samus-returns.jpg"/><!-- Duplicates added for seamless loop -->
+                    <img class="scroller" src="/resources/images/emu-screenshots/pokemon-ultra-moon.jpg"/>
+                    <img class="scroller" src="/resources/images/emu-screenshots/luigis-mansion-dark-moon.jpg"/>
+                    <img class="scroller" src="/resources/images/emu-screenshots/star-fox-64-3d.jpg"/>
+                    <img class="scroller" src="/resources/images/emu-screenshots/new-super-mario-bros-2.jpg"/>
+                </div>
             </div>
             <p>Forked from Citra, Lime3DS has all of the features you have come to expect from a 3DS emulator.</p>
             <p>Our mission is to continue to further the progress of 3DS emulation, implementing new features and making constant improvements for the benefit of your gaming experience.</p>
