--- a/pages/faq/index.html
+++ b/pages/faq/index.html
@@ -17,11 +17,9 @@
             <p>You can find these in <a href="https://github.com/Lime3DS/Lime3DS/blob/master/README.md#minimum-requirements">our GitHub readme</a>.</p>
             <br/>
 
-            <h2>How does Lime3DS compare to Citra Enhanced?</h2>
-            <p>While Lime3DS and Citra Enhanced were both created from Citra's demise, we have expressedly different goals.</p>
-            <p>Lime3DS aims to continue Citra's development as it always was and maintain the status quo with a focus on stability, careful consideration and proper procedure with all changes made to the emulator.</p>
-            <p>Citra Enhanced on the other hand focuses on advanced "hacks" which attempt to squeeze as much performance out of games as possible at the cost of stability and code sanity.</p>
-            <p>Both forks have their own independent purpose for existing, and are not competing projects.</p>
+            <h2>What does the error 'MSVCP140_ATOMIC_WAIT.dll not found' mean?</h2>
+            <p>If this error appears while using the Windows MSVC version of Lime3DS, it means that you have not installed the required Visual C++ Redistributable package.</p>
+            <p>You can download this <a href="https://learn.microsoft.com/en-us/cpp/windows/latest-supported-vc-redist?view=msvc-170">here</a>. The issue should disappear after it is installed.</p>
             <br/>
 
             <p>Have any other questions? Feel free to ask for help in our <a href="https://discord.com/invite/4ZjMpAp3M6">Discord server</a>.</p>
