Added mention of the compatibility tracker and compatibility list to FAQ

--- a/pages/faq/index.html
+++ b/pages/faq/index.html
@@ -7,6 +7,9 @@
         <div id="content">
             <h3>FAQ</h3>
 
+            <h2>Is [insert game] compatible with Lime3DS?</h2>
+            <p>You can view Lime3DS's game compatibility by visiting our <a href="https://lime3ds.github.io/pages/compatibility/">compatibility tracker</a>.</p>
+            <p>The compatibility reports may be outdated, so feel free to test your games and report your findings <a href="https://github.com/Lime3DS/compatibility-list/blob/master/CONTRIBUTING.md">here</a>.</p>
             <h2>Why does nothing happen when I open Lime3DS?</h2>
             <p>There 3 executables that come with Lime3DS named 'lime3ds-cli', 'lime3ds-room', and 'lime3ds-gui'.</p>
             <p>Please ensure you are opening the program named 'lime3ds-gui'.</p>
