Use non-breaking hyphens in top box of home page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <div id="content">
             <div id="box">
-                <h2 style="font-weight: 700;">Lime3DS is an open-source, easy-to-use Nintendo 3DS emulator</h2>
+                <h2 style="font-weight: 700;">Lime3DS is an open&#8209;source, easy&#8209;to&#8209;use Nintendo 3DS emulator</h2>
             </div>
             <div id="scrolling-gallery">
                 <div id="scrolling-gallery-container">
