Added FAQ entry on iOS support

--- a/pages/faq/index.html
+++ b/pages/faq/index.html
@@ -26,6 +26,10 @@
             <p>You can download this <a href="https://learn.microsoft.com/en-us/cpp/windows/latest-supported-vc-redist?view=msvc-170">here</a>. The issue should disappear after it is installed.</p>
             <br/>
 
+            <h2>Will Lime3DS ever have support for iOS?</h2>
+            <p>Support for iOS is not planned for the forseeable future. It is instead recommended that you use an iOS build of the original Citra emulator.</p>
+            <br/>
+
             <p>Have any other questions? Feel free to ask for help in our <a href="https://discord.com/invite/4ZjMpAp3M6">Discord server</a>.</p>
 
             <script>HTMLImporter.import("/resources/templates/generic-footer.html");</script>
