--- a/pages/faq/index.html
+++ b/pages/faq/index.html
@@ -27,7 +27,7 @@
             <br/>
 
             <h2>Will Lime3DS ever have support for iOS?</h2>
-            <p>Support for iOS is not planned for the forseeable future. It is instead recommended that you use an iOS build of the original Citra emulator.</p>
+            <p>Support for iOS is not planned for the foreseeable future. It is instead recommended that you use an iOS build of the original Citra emulator.</p>
             <br/>
 
             <p>Have any other questions? Feel free to ask for help in our <a href="https://discord.com/invite/4ZjMpAp3M6">Discord server</a>.</p>
