--- a/pages/faq/index.html
+++ b/pages/faq/index.html
@@ -12,8 +12,8 @@
             <p>The compatibility reports may be outdated, so feel free to test your games and report your findings <a href="https://github.com/Lime3DS/compatibility-list/blob/master/CONTRIBUTING.md">here</a>.</p>
 
             <h2>Why does nothing happen when I open Lime3DS?</h2>
-            <p>There 3 executables that come with Lime3DS named 'lime3ds-cli', 'lime3ds-room', and 'lime3ds-gui'.</p>
-            <p>Please ensure you are opening the program named 'lime3ds-gui'.</p>
+            <p>There are 2 executables that come with Lime3DS named 'lime3ds-room', and 'lime3ds'.</p>
+            <p>Please ensure you are opening the program named 'lime3ds'.</p>
             <br/>
 
             <h2>Why does Lime3DS crash repeatedly?</h2>
