Add footer and div content

--- a/pages/download/index.html
+++ b/pages/download/index.html
@@ -8,12 +8,17 @@
 
 <body>
     <script>HTMLImporter.import("/resources/templates/generic-nav.html");</script>
-    <h1>Latest Updates on GitHub - Lime3DS</h1>
-    <div id="release" class="release"></div>
 
-    <div class="navigation">
-        <button id="prev" onclick="navigate(-1)" disabled>Previous</button>
-        <button id="next" onclick="navigate(1)" disabled>Next</button>
+    <div id="content">
+        <h1>Latest Updates on GitHub - Lime3DS</h1>
+        <div id="release" class="release"></div>
+
+        <div class="navigation">
+            <button id="prev" onclick="navigate(-1)" disabled>Next</button>
+            <button id="next" onclick="navigate(1)" disabled>Previous</button>
+        </div>
+
+        <script>HTMLImporter.import("/resources/templates/generic-footer.html");</script>
     </div>
 
     <script>
@@ -58,7 +63,8 @@
             releaseDiv.innerHTML = `
                 <h4>Download:</h4>
                 <ul>${assetList}</ul>
-                <h3>Changelog: ${release.name}</h3>
+                <h2>Changelog:</h2>
+                <h3>${release.name}</h3>
                 <div>${marked(release.body || "No release notes available.")}</div>
             `;
         }
