--- a/pages/download/index.html
+++ b/pages/download/index.html
@@ -10,7 +10,7 @@
     <script>HTMLImporter.import("/resources/templates/generic-nav.html");</script>
 
     <div id="content">
-        <h1>Latest Updates on GitHub - Lime3DS</h1>
+        <h1>Latest Lime3DS Downloads</h1>
         <div id="release" class="release"></div>
         <div class="navigation">
             <button id="prev" onclick="navigate(-1)" disabled>Next</button>
